# Concord

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: harness.py  plot.py
benchmark/results/: latency.json
concord/: __init__.py  backoff.py  cli.py  config.py  logging_.py  memory.py  metrics.py  model.py  ports.py  relay.py
concord/adapters/: __init__.py  kafka.py  minio_.py  postgres.py  redis_.py
docs/: architecture.md  github_repo_metadata.md
docs/adr/: 0001-polling-vs-logical-replication.md  0002-redpanda-and-the-boring-database.md
tests/: test_logging.py  test_relay.py  test_support.py
