[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concord"
version = "0.1.0"
description = "A transactional outbox relay that keeps a database and an event stream in agreement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prasannakumar Kasindala" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["concord"]
