[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concord"
version = "0.2.4"
description = "A transactional outbox relay that keeps a database and an event stream in agreement."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prasannakumar Kasindala" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4", "matplotlib>=3.7"]
prod = [
    "psycopg[binary]>=3.1",
    "confluent-kafka>=2.3",
    "redis>=5.0",
    "minio>=7.2",
]

[project.scripts]
concord = "concord.cli:main"

[tool.setuptools]
packages = ["concord", "concord.adapters"]
